--- a/index.html
+++ b/index.html
@@ -1,29 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Team Challenge</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
-    <h1>Team Challenge</h1>
-    <div id="setup">
-        <label for="teamASize">Team A Size:</label>
-        <input type="number" id="teamASize" min="12" value="20">
-        <label for="teamBSize">Team B Size:</label>
-        <input type="number" id="teamBSize" min="12" value="20">
-        <label for="numCourts">Number of Courts:</label>
-        <input type="number" id="numCourts" min="2" max="12" value="9">
-        <button onclick="setupTeams()">Setup Teams</button>
+    <div id="all">
+        <h1>Team Challenge</h1>
+        <div id="sScreen">
+            <div id="setup">
+                <label for="teamASize">Team A Size:</label>
+                <input type="number" id="teamASize" min="0" value="0">
+                <label for="teamBSize">Team B Size:</label>
+                <input type="number" id="teamBSize" min="0" value="0">
+                <label for="numCourts">Number of Courts:</label>
+                <input type="number" id="numCourts" min="0" max="100" value="0">
+            </div>
+            <button onclick="setupTeams()">Setup Teams</button>
+        </div>
     </div>
-    <div id="teams">
-        <!-- Teams will be displayed here -->
+    <div id="pScreen">
+        <div id="teams">
+            <!-- Teams will be displayed here -->
+        </div>
+        <div id="matches">
+            <!-- Matches will be displayed here -->
+        </div>
+        <button id="nextRound" onClick="nextRound()">Next Round</button>
     </div>
-    <div id="matches">
-        <!-- Matches will be displayed here -->
     </div>
-    <button id="nextRound" onClick="nextRound()">Next Round</button>
     <script src="script.js"></script>
 </body>
+
 </html>
