--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
             <h1>Team Challenge</h1>
             <div id="setup">
                 <label for="teamASize">Team A Size:</label>
-                <input type="number" id="teamASize" min="0" value="0">
+                <input type="number" id="teamASize" min="0" value="">
                 <label for="teamBSize">Team B Size:</label>
-                <input type="number" id="teamBSize" min="0" value="0">
+                <input type="number" id="teamBSize" min="0" value="">
                 <label for="numCourts">Number of Courts:</label>
-                <input type="number" id="numCourts" min="0" max="100" value="0">
+                <input type="number" id="numCourts" min="0" max="100" value="">
             </div>
             <button onclick="setupTeams()">Setup Teams</button>
         </div>
