--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pickleball Rotation</title>
+    <title>Pickle Planz</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" type="image/x-icon" href="Untitled_Artwork.jpg">
+    <link rel="icon" type="image/x-icon" href="picklePlanz.jpg">
 </head>
 
 <body>
