Adds a winner ability to determine the winning side

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         </div>
     </div>
     <div id="pScreen">
+        <h3 id="scores">0-0</h3>
         <div id="teams">
             <!-- Teams will be displayed here -->
         </div>
